crates/sith_python_parser/tests/snapshots/invalid_syntax@for_stmt_missing_in_keyword.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/for_stmt_missing_in_keyword.py
---
## AST

```
Module(
    ModModule {
        range: 0..24,
        body: [
            For(
                ForStmt {
                    range: 0..12,
                    is_async: false,
                    target: Name(
                        NameExpr {
                            range: 4..5,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 6..7,
                            id: Name("b"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 9..12,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 9..12,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                ForStmt {
                    range: 13..23,
                    is_async: false,
                    target: Name(
                        NameExpr {
                            range: 17..18,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 18..18,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 20..23,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 20..23,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | for a b: ...
  |       ^ Syntax Error: Expected 'in', found name
2 | for a: ...
  |


  |
1 | for a b: ...
2 | for a: ...
  |      ^ Syntax Error: Expected 'in', found ':'
  |
